# hcs-UARF

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  QUICKSTART.md  README.md  REFACTOR_PLAN.md  UARF_ANALYSIS_AND_BUGFIX_REPORT.md  UARF_COMPREHENSIVE_ANALYSIS_REPORT.md  UARF_PHASE4_REPORT.md  UARF_RELEASE_v0.2.0.md  UARF_RELEASE_v0.3.0.md  UARF_RELEASE_v1.0.0.md  UARF_VOLLSTAENDIGE_ANALYSE_2026.md  install.sh  pyproject.toml  quickstart.py  test_uarf_complete.py  train.py  uarf_run.py
.github/workflows/: ci-cd.yml  test.yml
docs/: STATUS.md  TURBOQUANT_GOOGLE_RESEARCH_2026.md
minimal_test_output/checkpoint-000000_20260404_144410/: config.json  generation_config.json
test_data/: dataset.jsonl  dataset_summary.json  medium_dataset.json  mini_dataset.json  small_dataset.json  train.json  val.json
tests/: __init__.py  test_core.py  test_models.py  test_trainer.py
tutorials/: 01_getting_started.md  02_auto_mode.md  03_hardware_detection.md  README.md
uarf/: README_UARF.md  __init__.py  auto_mode.py  controller.py  logging.py
uarf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
uarf/cli/: uarf_cli.py
uarf/core/: __init__.py  checkpoint.py  config.py  config_lite.py  device_manager.py  hardware_detector.py  model_selector.py  swap_manager.py  trainer.py
uarf/data/: __init__.py  local_loader.py  test_dataset.py
uarf/exports/: __init__.py
uarf/exports/bitnet/: __init__.py
uarf/exports/edge/: __init__.py
uarf/exports/gguf/: __init__.py
uarf/exports/litert/: __init__.py
uarf/exports/turboquant/: __init__.py
uarf/exports/webgpu/: __init__.py
uarf/logging/: __init__.py  debug_logger.py
uarf/logging_module_backup/: __init__.py
uarf/models/: __init__.py  model_collection.py  registry.py
uarf/uarf_logging/: __init__.py
uarf/utils/: __init__.py  env_manager.py  exceptions.py
