[project]
name = "uarf"
version = "0.3.0"
description = "Universal AutoResearch Framework - LLM Training on ANY device"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "tqdm>=4.65.0",
    "psutil>=5.9.0",
    "huggingface_hub>=0.16.0",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.0.0",
]
cuda = [
    "torch>=2.0.0",
]

[project.scripts]
uarf = "uarf.cli.uarf_cli:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
