[project]
name = "uarf"
version = "1.0.0"
description = "Universal AutoResearch Framework - LLM Training on ANY device"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "hcsmedia", email = "support@hcsmedia.de"}
]
license = {text = "Apache-2.0"}
keywords = [
    "llm",
    "machine-learning",
    "deep-learning",
    "nlp",
    "transformers",
    "training",
    "auto-research",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "tqdm>=4.65.0",
    "psutil>=5.9.0",
    "huggingface_hub>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]
cuda = [
    "torch>=2.0.0+cu118",
]
cpu = [
    "torch>=2.0.0+cpu",
]
wandb = [
    "wandb>=0.15.0",
]
mlflow = [
    "mlflow>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/hcsmediacorp/hcs-UARF"
Documentation = "https://github.com/hcsmediacorp/hcs-UARF#readme"
Repository = "https://github.com/hcsmediacorp/hcs-UARF.git"
Issues = "https://github.com/hcsmediacorp/hcs-UARF/issues"
Changelog = "https://github.com/hcsmediacorp/hcs-UARF/blob/main/CHANGELOG.md"

[project.scripts]
uarf = "uarf.cli.uarf_cli:main"

[tool.setuptools.packages.find]
include = ["uarf*"]

[tool.setuptools.package-data]
uarf = ["py.typed"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "datasets.*",
    "torch.*",
    "tqdm.*",
    "psutil.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=uarf --cov-report=term-missing"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
]
